# hostmode-demo

./: .gitignore  README.md  env.example
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  session.py
backend/app/avatar/: __init__.py  turn.py
backend/app/doubao/: __init__.py  client.py  protocol.py
backend/tests/: test_app.py  test_doubao_protocol.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: avatar.ts  main.ts  styles.css
